fix error on mobile

--- a/src/components/organisms/nav-bar/NavBar.module.scss
+++ b/src/components/organisms/nav-bar/NavBar.module.scss
@@ -65,7 +65,7 @@
         }
       }
       .search-input {
-        @apply w-full;
+        @apply w-full bg-white;
         &:focus {
           outline: none;
         }
