--- a/src/pages/Content/styles/Player.module.scss
+++ b/src/pages/Content/styles/Player.module.scss
@@ -26,6 +26,11 @@
       .description {
         @apply invisible;
       }
+      .content {
+        * {
+          @apply invisible;
+        }
+      }
     }
   }
   .player-wrapper {
@@ -40,7 +45,7 @@
       background-color: rgb(#111, 0.5);
     }
     .description {
-      @apply p-3;
+      @apply p-3 text-black;
       .file-download {
         @apply cursor-pointer;
         .icon-container {
@@ -59,7 +64,7 @@
       }
     }
     .content {
-      @apply rounded-lg w-full;
+      @apply rounded-lg w-full p-3;
       background-color: #eee;
       height: 80%;
     }
