--- a/src/pages/Content/styles/Profile.module.scss
+++ b/src/pages/Content/styles/Profile.module.scss
@@ -6,28 +6,28 @@
 .bundle {
   @apply mb-12;
   .bundle-title {
-    @apply text-lg font-bold mb-2;
+    @apply text-lg font-bold mb-2 text-black;
   }
   .company-info {
-    @apply font-bold grid gap-10 mb-1;
+    @apply font-bold grid gap-10 mb-1 text-black;
     grid-template-columns: 0.8fr 1fr;
   }
   .item {
     @apply mb-3;
     &.education-info {
-      @apply grid gap-10;
+      @apply grid gap-10 text-black;
       grid-template-columns: 0.8fr 1fr;
     }
     &.language-info {
-      @apply grid gap-5;
+      @apply grid gap-5 text-black;
       grid-template-columns: 1.4fr 1.4fr 0.4fr 1fr;
     }
     &.license-info {
-      @apply grid gap-5;
+      @apply grid gap-5 text-black;
       grid-template-columns: 3.2fr 1fr;
     }
     .li {
-      @apply ml-2 text-sm;
+      @apply ml-2 text-sm text-black;
       &::before {
         content: '';
         @apply rounded-full bg-black inline-block mr-1 -translate-y-1;
